force-app/main/default/objects/Facilitator__c/Facilitator__c.object-meta.xml
<CustomObject>
    <label>Facilitator</label>
    <nameField>
        <label>Facilitator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilitators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>