force-app/main/default/objects/Facilitator__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck when a facilitator leaves. Inactive facilitators are hidden from the scheduling picker but their history is retained.</description>
    <inlineHelpText>Uncheck to remove this facilitator from the scheduling picker.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>