force-app/main/default/objects/Facilitator__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Contact email. Facilitators have no Salesforce login.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>