force-app/main/default/objects/Facilitator__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Facilitator given name. Facilitators are records, not Salesforce users.</description>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>